--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/fried_rice.html"></a>fried rice</li>
-        <li><a href="recipes/noodles.html"></a>noodles</li>
-        <li><a href="recipes/pasta.html"></a>pasta</li>
+        <li><a href="recipes/fried_rice.html"> Fried rice</a></li>
+        <li><a href="recipes/noodles.html"> Noodles</a></li>
+        <li><a href="recipes/pasta.html"> Pasta</a></li>
     </ul>
 </body>
 </html>
